# lab-work-template

./: README.md  cookiecutter.json  pyproject.toml  report{{cookiecutter.lab_work_num}}.docx  {{cookiecutter.file_name}}.py
extensions/: to_camel.py
hooks/: post_gen_project.sh  pre_gen_project.py
{{cookiecutter.lab_work_num}}/: Makefile  fill_report_template.py  metainfo.txt  pyproject.toml  report{{cookiecutter.lab_work_num}}.docx  template.docx  {{cookiecutter.file_name}}.py
{{cookiecutter.lab_work_num}}/tests/: test_{{cookiecutter.file_name}}.py
